# pain001

./: .bandit.yml  .flake8  .gitignore  .pylintrc  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  TEMPLATE.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/scripts/: build.sh  requirements.txt
.github/workflows/: ci.yml
data/: data.csv  data.xsd  data_updated.xml  pain.001.001.03.xml  pain.001.001.03.xsd
docs/: 404.html  CNAME  README.md  browserconfig.xml  conf.py  humans.txt  index.html  index.md  index.rst  modules.rst  pain001.constants.rst  pain001.context.rst  pain001.core.rst  pain001.rst  robots.txt  rss.xml  sitemap.xml
docs/404/: index.html  manifest.json  robots.txt  rss.xml  sitemap.xml
docs/Bank-to-Customer-Cash-Management/Messages/BankToCustomerDebitCreditNotificationV10/: camt.054.001.10.md
docs/Bank-to-Customer-Cash-Management/Messages/BankToCustomerStatementV10/: camt.053.001.10.md
docs/Bank-to-Customer-Cash-Management/message-definition-report/: iso20022_mdrpart3_banktocustomercashmanagement_2021_2022.xlsx
docs/Bank-to-Customer-Cash-Management/messages/camt.054.001.10/: camt.054.001.10.xsd
docs/Bank-to-Customer-Cash-Management/messages/camt.060.001.10/: README.md  camt.060.001.06.xsd
docs/Payments Clearing and Settlement/Message Definition Report/: ISO20022_MDRPart1_PaymentsClearingAndSettlement_2020_2021_v1.docx
docs/Payments Clearing and Settlement/Messages/FIToFIPaymentStatusReportV12/: pacs.002.001.12.xsd
docs/Payments Clearing and Settlement/Messages/FinancialInstitutionCreditTransferV10/: pacs.009.001.10.xsd
docs/Payments Initiation/Message Definition Report/: ISO20022_MDRPart3_PaymentsInitiation_2020_2021.xlsx
docs/Payments Initiation/Messages/CustomerCreditTransferInitiationV03/: pain.001.001.03.md
docs/Payments Initiation/Messages/CustomerPaymentReversalV11/: pain.007.001.11.md
docs/Payments Initiation/Messages/CustomerPaymentStatusReportV12/: pain.002.001.12.md
docs/bank-to-customer-cash-management/message-definition-report/: iso20022_mdrpart1_banktocustomercashmanagement_2021_2022.docx
docs/bank-to-customer-cash-management/messages/camt.052.001.10/: README.md
docs/bank-to-customer-cash-management/messages/camt.053.001.10/: camt.053.001.10.xsd
docs/pain.001.001.03/: index.html  manifest.json  robots.txt  rss.xml  sitemap.xml
docs/pain.001.001.09/: index.html  manifest.json  robots.txt  rss.xml  sitemap.xml
docs/payments/: index.html  manifest.json  robots.txt  rss.xml  sitemap.xml
docs/payments-clearing-and-settlement/message-definition-report/: ISO20022_MDRPart3_PaymentsClearingAndSettlement_2020_2021.xlsx
docs/payments-clearing-and-settlement/messages/financialinstitutiondirectdebitv05/: pacs.010.001.05.md
docs/payments-clearing-and-settlement/messages/fitofipaymentstatusrequestv05/: pacs.028.001.05.xsd
docs/payments-clearing-and-settlement/messages/pacs.002.001.12/: README.md
docs/payments-clearing-and-settlement/messages/pacs.003.001.09/: README.md  pacs.003.001.09.xsd
docs/payments-clearing-and-settlement/messages/pacs.004.001.11/: README.md  pacs.002.001.04.xsd  pacs.003.001.03.xsd  pacs.004.001.03.xsd  pacs.007.001.03.xsd  pacs.008.001.03.xsd  pacs.009.001.03.xsd
docs/payments-clearing-and-settlement/messages/pacs.007.001.11/: README.md  pacs.007.001.11.xsd
docs/payments-initiation/message-definition-report/: ISO20022_MDRPart1_PaymentsInitiation_2020_2021_v1.docx
docs/payments-initiation/messages/pain.001.001.03/: README.md  (+1 more)
pain001/: __init__.py  __main__.py  core.py  create_root_element.py  create_xml_element.py  generate_updated_xml_file_path.py  load_csv_data.py  register_namespaces.py  validate_csv_data.py  validate_via_xsd.py  write_xml_to_file.py  xml_generator.py
pain001/cli/: cli.py
pain001/constants/: constants.py
pain001/context/: __init__.py  context.py
pain001/core/: __init__.py  core.py
pain001/csv/: load_csv_data.py  validate_csv_data.py
pain001/db/: load_db_data.py  validate_db_data.py
pain001/templates/pain.001.001.03/: template.xml
pain001/templates/pain.001.001.04/: template.db  template.xml
pain001/templates/pain.001.001.05/: pain.001.001.05.xml  template.db  template.xml
pain001/templates/pain.001.001.06/: pain.001.001.06.xml  pain.001.001.06.xsd  template.db
pain001/templates/pain.001.001.08/: template.xml
pain001/templates/pain.001.001.09/: pain.001.001.09.xml  template.csv  template.db  template.xml
pain001/xml/: create_common_elements.py  create_root_element.py  create_xml_element.py  create_xml_v3.py  create_xml_v4.py  create_xml_v5.py  create_xml_v6.py  create_xml_v7.py  create_xml_v8.py  create_xml_v9.py  generate_iso20022_payments.py  generate_updated_xml_file_path.py  generate_xml.py  register_namespaces.py  validate_via_xsd.py  write_xml_to_file.py  xml_generator.py
public/pain.001.001.09/: index.html
templates/: template.csv  template.xml  template_updated.xml
templates/pain.001.001.03/: pain.001.001.03.xml  template.csv  template.db  template.xml
templates/pain.001.001.04/: pain.001.001.04.xml  template.csv  template.db  template.xml
templates/pain.001.001.05/: pain.001.001.05.xml  template.csv  template.xml
templates/pain.001.001.06/: pain.001.001.06.xml  template.csv  template.xml
templates/pain.001.001.07/: pain.001.001.07.xml  template.csv  template.xml
templates/pain.001.001.08/: pain.001.001.08.xml  pain.001.001.08.xsd  template.csv
templates/pain.001.001.09/: pain.001.001.09.csv  pain.001.001.09.xml  pain.001.001.09.xsd  template.csv  template.xml  test.xml
tests/: test_context.py  test_core.py  test_create_root_element.py  test_create_xml_element.py  test_data.py  test_generate_updated_xml_file_path.py  test_generate_xml.py  test_load_csv_data.py  test_load_db_data.py  test_main.py  test_validate_csv_data.py  test_validate_db_data.py  test_validate_via_xsd.py  test_xml_generator.py
tests/data/: empty.csv  existing_file.csv  invalid.xml  invalid.xsd  invalid_data.csv  invalid_updated.xml  pain.001.001.03.xml  single_row.csv  template.csv  template.db  valid_data.csv
(+26 files in other folders)
