# Copyright (C) 2023 Sebastien Rousseau.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or
# implied.
#
# See the License for the specific language governing permissions and
# limitations under the License.

[metadata]
name = pain001
version = 0.0.21
description = Pain001, A Python Library for Automating ISO 20022-Compliant Payment Files Using CSV Or SQlite Data Files.
keywords = pain001,iso20022,payment-processing,automate-payments,sepa,financial,banking-payments,csv,sqlite
author = Sebastian Rousseau
author_email = sebastian.rousseau@gmail.com
url = https://github.com/sebastienrousseau/pain001
license = Apache License 2.0
license_files =
    LICENSE-APACHE
    LICENSE-MIT
long_description = file: README.md
long_description_content_type = text/markdown

classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Financial and Insurance Industry
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS
    Operating System :: OS Independent
    Operating System :: POSIX
    Operating System :: Unix
    Programming Language :: Python
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries :: Python Modules

project_urls =
    Documentation = https://pain001.com/
    Funding = https://paypal.me/wwdseb
    Source = https://github.com/sebastienrousseau/pain001/releases

[options]
packages =
    pain001
zip_safe = False
include_package_data = True
python_requires = ~=3.9
install_requires =
    click
    defusedxml
    rich
    xmlschema

[aliases]
test = pytest

[tool:pytest]
testpaths = tests

[wheel]
universal = 1

