# Copyright (C) 2023 Sebastien Rousseau.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or
# implied.
#
# See the License for the specific language governing permissions and
# limitations under the License.

[metadata]
name = pain001
version = 0.0.24

[options]
install_requires =
    click==8.1.7
    colorama==0.4.6
    defusedxml==0.7.1
    elementpath==4.1.5
    jinja2==3.1.2
    markdown-it-py==3.0.0
    markupsafe==2.1.3
    mdurl==0.1.2
    pygments==2.17.1
    rich==13.7.0
    xmlschema==2.5.0

[aliases]
test = pytest

[tool:pytest]
testpaths = tests

[wheel]
universal = 1
