# Copyright (C) 2023 Sebastien Rousseau.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or
# implied.
#
# See the License for the specific language governing permissions and
# limitations under the License.

[metadata]
author = "Sebastien Rousseau <sebastian.rousseau@gmail.com>"
description = "Pain001 is a Python Library for Automating ISO 20022-Compliant Payment Files Using CSV Data."
license = "Apache Software License"
name = pain001
version = 0.0.25

[options]
packages = find:
include_package_data = true
install_requires =
    click==8.1.7
    colorama==0.4.6
    datetime==5.5
    defusedxml==0.7.1
    elementpath==4.4.0
    jinja2==3.1.4
    markdown-it-py==3.0.0
    markupsafe==2.1.5
    mdurl==0.1.2
    pygments==2.18.0
    rich==13.7.1
    setuptools==69.5.1
    xmlschema==3.3.1

[options.extras_require]
dev =
    pytest==8.1.0
    pytest-cov==5.0.0

[options.entry_points]
console_scripts =
    pain001 = pain001.cli:main

[aliases]
test = pytest

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
known_first_party = "pain001"
known_third_party = "xmlschema"

[tool.pytest]
addopts = "--cov=pain001 --cov-report=term-missing --cov-report=xml --cov-report=html --cov-fail-under=80"
testpaths = "tests"

[wheel]
universal = 1
